# catalog

./: .gitignore  AGENTS.md  config.yaml  project.yml  pyproject.toml
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
DriveCatalog/: ContentView.swift  DriveCatalog.entitlements  DriveCatalogApp.swift  Info.plist
DriveCatalog.xcodeproj/: project.pbxproj
DriveCatalogUITests/: DriveCatalogUITests.swift  TransferFlowUITests.swift
backend/: .env.example  requirements.txt  vercel.json
benchmarks/: hash_ordering.py
design/: DECISIONS.md  HANDOFF-samsung-drive-collision.md  ISSUES.md  MODE  OPEN_QUESTIONS.md  RESEARCH-disk-usage-bug.md  RESEARCH-safe-transfers.md  SIGNALS.md  SPARRING.md  STATE.md
icon.icon/: icon.json
mockups/: dashboard-v2.html  dashboard.html
phases/: PHASE-01-CORE-IMPROVEMENTS.md  PHASE-02-MANAGE-PAGE.md  PHASE-03-SAFE-TRANSFERS.md
scripts/: build-release.sh  bundle-python.sh  embed-python.sh  embed-secrets.sh  publish-release.sh
tests/: conftest.py  integration_test.py  test_api_bug_report.py  test_api_drives.py  test_api_duplicates.py  test_api_files.py  test_api_operations.py  test_api_search.py  test_api_status.py  test_backend_endpoints.py  test_catalog_bundle.py  test_concurrent_scan.py  test_consolidation_recommendations.py  test_copier.py  test_database.py  test_drive_recognition.py  test_drives.py  test_duplicates.py  test_folder_duplicates.py  test_hasher.py  test_migrations.py  test_scanner.py  test_search.py  test_transfers.py
updates/: latest.json
(+194 files in other folders)
