[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drivecatalog"
version = "0.1.0"
description = "CLI tool for cataloging external drives and detecting duplicates"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "xxhash>=3.0.0",
    "watchdog>=3.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
drivecatalog = "drivecatalog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
