[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drivecatalog"
version = "0.1.0"
description = "CLI tool for cataloging external drives and detecting duplicates"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "xxhash>=3.0.0",
    "watchdog>=3.0.0",
    "ffmpeg-python>=0.2.0",
    "pyyaml>=6.0.0",
    "fastapi[standard]>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
]

[project.scripts]
drivecatalog = "drivecatalog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
